--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <!-- Your image here -->
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          A high resolution image of acoustic scattering.
         </h2>
       </div>
       <div class="item">
