--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Control of Partial Differential Equations Through Physics-Informed Latent Space</title>
+  <title>Acoustic Wave Manipulation Through Sparse Robotic Actuation</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -51,7 +51,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Control of Partial Differential Equations Through Physics-Informed Latent Space</h1>
+            <h1 class="title is-1 publication-title">Acoustic Wave Manipulation Through Sparse Robotic Actuation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -59,19 +59,21 @@
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Stas Tiomkin</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Feruza Amirkulova</a><sup>1</sup>,</span>
+                  <span class="author-block">
+                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Stas Tiomkin</a><sup>2</sup>,</span>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">San Jose State University<br>ICRA 2025</span>
+                    <span class="author-block">San Jose State University<sup>1</sup>, Texas Tech University<sup>2</sup><br>ICRA 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
-                      <span class="link-block">
+                      <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
@@ -79,9 +81,9 @@
                         </span>
                         <span>Paper</span>
                       </a>
-                    </span>
+                    </span> -->
 
-                    <!-- Supplementary PDF link -->
+                    <!-- Supplementary PDF link
                     <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
@@ -90,7 +92,7 @@
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- Github link -->
                   <span class="link-block">
@@ -147,7 +149,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Partial Differential Equations (PDEs) are foundational descriptive tools in scientific and engineering disciplines, enabling the exploration of phenomena from material design to climate dynamics and the propagation of pandemics and wildfires. Establishing control of PDEs, especially when the underlying phenomena are only partially observable, holds great potential for fostering technological innovations. This ambition faces considerable obstacles, as a generalizable sample-based solution remains elusive. Addressing this challenge, our work introduces a framework leveraging physics-informed machine learning (ML) to enable control of PDEs. Central to this framework is an agent, equipped with sensors to perceive its environment, that generates a low-dimensional physics-informed representation of the environment. This representation enables the derivation of an optimal policy for sparse control by the agent's actuators. Our framework introduces a novel objective function which guides the agent to learn from its environment. We show two alternative implementations of the objective in the particular setting of the acoustic wave equation. One implementation employs differentiable numerical integration, while the other relies on physics-informed neural networks (PINN). We showcase the superiority of these approaches in prediction and control of scattered acoustic wave energy compared to the state-of-the-art methods.
+            Recent advancements in robotics, control, and machine learning have facilitated progress in the challenging area of object manipulation. These advancements include, among others, the use of deep neural networks to represent dynamics that are partially observed by robot sensors, as well as effective control using sparse control signals. In this work, we explore a more general problem: the manipulation of acoustic waves, which are partially observed by a robot capable of influencing the waves through spatially sparse actuators. This problem holds great potential for the design of new artificial materials, ultrasonic cutting tools, energy harvesting, and other applications. We develop an efficient data-driven method for robot learning that is applicable to either focusing scattered acoustic energy in a designated region or suppressing it, depending on the desired task. In this method, observations of an acoustic wave are captured by sensors, and the wave is manipulated by a small number of scatterers controllable by a physics-informed robot. The latter is achieved by constraining the space of dynamics models to partial-differential equations (PDEs), corresponding to wave phenomena. One of the unique features of this framework is its potential realizability by an actual physical robot. The proposed method is significantly better in terms of a solution quality and computational complexity as compared to the state of the art methods on focusing and scattering in various important scenarios. We have made the project code publicly available, along with a web page\ST{add an anonymous URL here} featuring video demonstrations and a tutorial. This work opens doors for new research directions in robotics and for new technologies in the field of wave manipulation. 
           </p>
         </div>
       </div>
@@ -166,28 +168,28 @@
         <!-- Your image here -->
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          A high resolution image of acoustic scattering.
+          Schematic representation of interaction between an agent and acoustic wave. The agent observes wave through its `Sensor' readings, and affects it back by choosing the optimal locations and radii of the cylindrical scatterers (gray blobs) according to its `Controller' (policy). Wave propagates with the speed of sound according to the Wave PDE, while robot dynamics (actuation of the cylinders) is an order of magnitude slower time scale. `Excitation' represents an exogenous source of acoustic energy (e.g., speaker). The `Dissipation' layer prevents wave reflections from the boundaries and allows for the efficient simulation of open space (infinite) environments. Robot's policy is trained to achieve a desired wave configuration such as focusing energy in a particular location or minimizing total scattered energy.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel2.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Second image description.
+          A high resolution image of wave scattering produced by our simulator.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-         Third image description.
+          Numerical Integration Scheme: Latent initial condition and exogenous function are obtained from the Wave Encoder. Latent control functions from the Design Encoder are interpolated to form a continuous time control function. Numerical integration results in latent solution.
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
       <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        Fourth image description.
+        PINN Scheme: The latent initial condition and exogenous function are collected from the Wave Encoder. Latent control functions are collected from the Design Encoder. Both sets of inputs from the encoders are passed to compressor network which produces a compressed representation. The PINN conditioned with the compressed representation is evaluated over the latent spatiotemporal domain to produce the latent solution.
       </h2>
     </div>
   </div>
@@ -208,6 +210,9 @@
             <source src="static/videos/carousel1.mp4"
             type="video/mp4">
           </video>
+          <h2 class="subtitle has-text-centered">
+            Total wave energy field.
+          </h2>
         </div>
         <div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
@@ -215,6 +220,9 @@
             <source src="static/videos/carousel2.mp4"
             type="video/mp4">
           </video>
+          <h2 class="subtitle has-text-centered">
+            Incident wave energy field.
+          </h2>
         </div>
         <div class="item item-video3">
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
@@ -222,6 +230,9 @@
             <source src="static/videos/carousel3.mp4"
             type="video/mp4">
           </video>
+          <h2 class="subtitle has-text-centered">
+            Scattered wave energy field.
+          </h2>
         </div>
       </div>
     </div>
@@ -230,7 +241,7 @@
 <!-- End video carousel -->
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -240,7 +251,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
