--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Feruza Amirkulova</a><sup>1</sup>,</span>
-                  <span class="author-block">
-                    <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Stas Tiomkin</a><sup>2</sup>,</span>
-                  </span>
+                <span class="author-block">
+                  <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Samer Gerges</a><sup>1</sup>,</span>
+                <span class="author-block">
+                  <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Feruza Amirkulova</a><sup>1</sup>,</span>
+                <span class="author-block">
+                  <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Stas Tiomkin</a><sup>2</sup>,</span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
